--- a/haskell-etcd.cabal
+++ b/haskell-etcd.cabal
@@ -20,6 +20,6 @@ library
   exposed-modules:     Data.DHT, Data.DHT.Etcd
   -- other-modules:       
   other-extensions:    RecordWildCards, OverloadedStrings
-  build-depends:       base >=4.6 && < 5, HTTP >=4000.3 && <4000.4, aeson >=0.9 && <0.12
-  hs-source-dirs:      Data
+  build-depends:       base >=4.6 && < 5, HTTP >=4000.3 && <4000.4, aeson >=0.9 && <0.12, network-uri
+  hs-source-dirs:      src/
   default-language:    Haskell2010
